Updating with DecouplingConverter fixes